...
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            buildFutureBuilderUsdToBTC(),
            TextField(
              key: Key('usdtobtc_textfield'), //TextField key for usdtobtc
              decoration: InputDecoration(
                border: OutlineInputBorder(),
                labelText: 'Enter your USD value',
              ),
              controller: _controller,
              keyboardType: TextInputType.number,
...
